src/tiny-media-manager/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tmm-svc
  namespace: ###ZARF_VAR_NAMESPACE###
spec:
  ports:
    - name: http
      port: 80
      targetPort: 4000
  selector:
    app: tmm-app
